qpnp-smbcharger: Publish charger voltage to the usb psy
Since N, the Keyguard uses watt data rather than amperage alone. It
needs both voltage and amperage information for the power supply
subsystem to do so.

This brings back the "Charging slowly", "Charging" and "Charging
rapidly" texts on the lock screen.

Change-Id: Iac37d8b69d2acc048e8c132b2c26c2bed3676d75

--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -2154,6 +2154,7 @@ CONFIG_BATTERY_MAX17050=y
 CONFIG_LGE_PM_CHARGE_INFO=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO=y
 CONFIG_LGE_PM_PARALLEL_CHARGING=y
+CONFIG_CHARGER_VOLTAGE=y
 # CONFIG_LGE_PM_BOARD_THERM is not set
 # CONFIG_LGE_PM_THERM_VS is not set
 # CONFIG_LGE_PM_CHECK_FB_STATUS is not set
