LGE: msm8992: Enable LGE exclusive panel features CONFIG_LGE_PP_AD_SUPPORTED=y CONFIG_LGE_DISPLAY_DUAL_BACKLIGHT=y
Change-Id: I599502f7b860422d3b266a7f9d5c25888145bd70

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -2806,7 +2806,7 @@ CONFIG_LGE_LCD_OFF_DIMMING=y
 # CONFIG_LGE_SP_MIRRORING_CTRL_BL is not set
 CONFIG_LGE_PARTIAL_UPDATE=y
 CONFIG_LGE_P1_SRE_SUPPORTED=y
-# CONFIG_LGE_PP_AD_SUPPORTED is not set
+CONFIG_LGE_PP_AD_SUPPORTED=y
 CONFIG_LGE_CAM_PREVIEW_TUNE=y
 # CONFIG_LGE_TE_SEL is not set
 CONFIG_LGE_DISPLAY_POWER_SEQUENCE=y
@@ -3817,6 +3817,7 @@ CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_MACH_LGE=y
+CONFIG_LGE_DISPLAY_DUAL_BACKLIGHT=y
 
 #
 # LGE Board Selection
