arch: arm: add m24c64s eeprom node to 8992 MTP
Add m24c64s eeprom node for imx377 driver on 8992 MTP

Change-Id: Ie257fb6883c8e88c8e0c82d89d34de28c4ccca94
Signed-off-by: Soundrapandian Jeyaprakash <jsoundra@codeaurora.org>
(cherry-picked from b8a3c0e4c25517ae1483e1c7252a48f11c4ab10f)

ARM: dts: msm: Add one more GPIO for WLAN hardware in MSM8992

GPIO 111 is also used as a bootstrap pin by WLAN hardware in
MSM8992, hence add it to DT notes so that it can be handled
by CNSS driver.

Change-Id: Ia8d9173de5929beceaa81036522f2a2c8eccffb9
CRs-fixed: 864910
Signed-off-by: Yue Ma <yuem@codeaurora.org>

power: qpnp-fg: modify the cycle counter implementation

Currently, cycle counter gets incremented only when the charging
happens within the specified low and high soc thresholds. Instead
of that, implement the bucket based cycle counter algorithm which
increments the counters based on multiple charging buckets. This
helps to study the charging pattern.

For example, with a bucket count of 8, if the user charges from 5
to 30% and removes the charger, cycle counter for buckets 1 and 2
would get incremented. This bucket based cycle counters will be
available to the userspace via cycle_count property after the
cycle_count_id property is set to specify which bucket needs to
be read.

For example, to read cycle count for bucket 4, following helps.

echo 4 > /sys/class/power_supply/bms/cycle_count_id
cat /sys/class/power_supply/bms/cycle_count

Since this algorithm operates on all the SOC levels (0-100%),
there is no need for low and high SOC thresolds. Remove them.

CRs-Fixed: 847140
Change-Id: I1c0840f01693909586cafb3d51685637f3a6d2ba
Signed-off-by: Subbaraman Narayanamurthy <subbaram@codeaurora.org>

power: qpnp-fg: fix error condition in get_batt_id

The bias current is identified only by the lower two bits, and its
value can be 1, 2, or 3. The current bounds check is incorrect. Fix
it.

CRs-Fixed: 857879
Change-Id: Icf34d1144904b9d41f5181625dcf598c247e33d3
Signed-off-by: Nich

--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -320,8 +320,6 @@
 			qcom,fg-iterm-ma = <100>;
 			qcom,fg-chg-iterm-ma = <100>;
 			qcom,cycle-counter-en;
-			qcom,cycle-counter-low-soc = <15>;
-			qcom,cycle-counter-high-soc = <85>;
 			qcom,capacity-learning-on;
 			qcom,fg-cc-cv-threshold-mv = <4340>;
 			qcom,pmic-revid = <&pmi8994_revid>;
@@ -640,16 +638,16 @@
 			qcom,headroom-sense-ch0-enabled;
 			qcom,headroom-sense-ch1-enabled;
 			qcom,power-detect-enabled;
+			qcom,duration = <1280>;
 
 			pmi8994_flash0: qcom,flash_0 {
 				label = "flash";
 				qcom,led-name = "led:flash_0";
 				qcom,default-led-trigger =
 						"flash0_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <0>;
-				qcom,current = <625>;
+				qcom,current = <1000>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_flash1: qcom,flash_1 {
@@ -657,10 +655,9 @@
 				qcom,led-name = "led:flash_1";
 				qcom,default-led-trigger =
 						"flash1_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <1>;
-				qcom,current = <625>;
+				qcom,current = <1000>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_torch0: qcom,torch_0 {
@@ -668,7 +665,6 @@
 				qcom,led-name = "led:torch_0";
 				qcom,default-led-trigger =
 						"torch0_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <0>;
 				qcom,current = <120>;
 				reg0 {
@@ -679,6 +675,7 @@
 				reg1 {
 					regulator-name = "pon_spare_reg";
 				};
+				qcom,max-current = <200>;
 			};
 
 			pmi8994_torch1: qcom,torch_1 {
@@ -686,7 +683,6 @@
 				qcom,led-name = "led:torch_1";
 				qcom,default-led-trigger =
 						"torch1_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <1>;
 				qcom,current = <120>;
 				reg0 {
@@ -697,7 +693,27 @@
 				reg1 {
 					regulator-name = "pon_spare_reg";
 				};
+				qcom,max-current = <200>;
 			};
+
+			pmi8994_switch: qcom,switch {
+				label = "switch";
+				qcom,led-name = "led:switch";
+				qcom,default-led-trigger =
+						"switch_trigger";
+				qcom,id = <2>;
+				qcom,current = <625>;
+				qcom,max-current = <1000>;
+				qcom,duration = <1280>;
+				reg0 {
+					regulator-name =
+						"pmi8994_boostbypass";
+					max-voltage = <3600000>;
+				};
+				reg1 {
+					regulator-name = "pon_spare_reg";
+				};
+                        };
 		};
 	};
 };
