--- a/arch/arm/boot/dts/qcom/msm8992-bus.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8992-bus.dtsi
@@ -1468,8 +1468,7 @@
 		};
 	};
 
-//LGE_CHANGE_S, Increased camera power issue fix after migration at 8/18, 151118, changhwan.kang@lge.com
-/*	static-rules {
+	static-rules {
 		compatible = "qcom,msm-bus-static-bw-rules";
 
 		rule0 {
@@ -1500,8 +1499,7 @@
 			qcom,mode = <THROTTLE_OFF>;
 			qcom,dest-node = <&mas_apps_proc>;
 		};
-	};*/
-//LGE_CHANGE_E, Increased camera power issue fix after migration at 8/18, 151118, changhwan.kang@lge.com
+	};
 
 	devfreq_spdm_cpu {
 		compatible = "qcom,devfreq_spdm";
@@ -1518,8 +1516,8 @@
 		clocks = <&clock_cpu clk_cci_clk>;
 
 		qcom,bw-upstep = <1000>;
-		qcom,bw-dwnstep = <1000>;
-		qcom,max-vote = <10000>;
+		qcom,bw-dwnstep = <5000>;
+		qcom,max-vote = <5000>;
 		qcom,up-step-multp = <2>;
 		qcom,spdm-interval = <100>;
 
@@ -1529,14 +1527,14 @@
 		qcom,bucket-size = <8>;
 
 		/*max pl1 freq, max pl2 freq*/
-		qcom,pl-freqs = <140000000 160000000>;
+		qcom,pl-freqs = <280000000 350000000>;
 
 		/* pl1 low, pl1 high, pl2 low, pl2 high, pl3 low, pl3 high */
 		qcom,reject-rate = <5000 5000 5000 5000 5000 5000>;
 		/* pl1 low, pl1 high, pl2 low, pl2 high, pl3 low, pl3 high */
 		qcom,response-time-us = <10000 10000 10000 10000 3000 3000>;
 		/* pl1 low, pl1 high, pl2 low, pl2 high, pl3 low, pl3 high */
-		qcom,cci-response-time-us = <10000 10000 10000 10000 1000 1000>;
+		qcom,cci-response-time-us = <10000 10000 10000 10000 3000 3000>;
 		qcom,max-cci-freq = <787000000>;
 	};
 
