--- a/arch/arm/boot/dts/qcom/msm8992-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8992-pm.dtsi
@@ -448,6 +448,7 @@
 			<0xff 59>,  /* mss_to_apps_irq(2) */
 			<0xff 60>,  /* mss_to_apps_irq(3) */
 			<0xff 61>,  /* mss_a2_bam_irq */
+			<0xff 65>,  /* kgsl-3d0 */
 			<0xff 70>,  /* iommu_pmon_nonsecure_irq */
 			<0xff 74>,  /* osmmu_CIrpt[1] */
 			<0xff 75>,  /* osmmu_CIrpt[0] */
@@ -457,15 +458,21 @@
 			<0xff 94>,  /* osmmu_CIrpt[0] */
 			<0xff 97>,  /* iommu_nonsecure_irq */
 			<0xff 99>,  /* msm_iommu_pmon_nonsecure_irq */
-			<0xff 102>,  /* osmmu_CIrpt[1] */
+			<0xff 102>, /* osmmu_CIrpt[1] */
 			<0xff 105>, /* iommu_pmon_nonsecure_irq */
 			<0xff 109>,  /* ocmem_dm_nonsec_irq */
+                        <0xff 115>, /* mdss */
 			<0xff 126>,  /* bam_irq[0] */
+                        <0xff 128>, /* i2c-msm-v2-irq(0) */
+                        <0xff 130>, /* i2c-msm-v2-irq(1) */
+                        <0xff 131>, /* i2c-msm-v2-irq(2) */
+                        <0xff 137>, /* i2c-msm-v2-irq(3) */
 			<0xff 155>,  /* sdcc_irq[0] */
 			<0xff 159>,  /* mmc2 */
 			<0xff 163>,  /* usb30_ee1_irq */
 			<0xff 164>,  /* sps */
 			<0xff 170>,  /* sdcc_pwr_cmd_irq */
+			<0xff 170>, /* sdcc_pwr_cmd_irq */
 			<0xff 173>, /* o_wcss_apss_smd_hi */
 			<0xff 174>, /* o_wcss_apss_smd_med */
 			<0xff 175>, /* o_wcss_apss_smd_low */
@@ -494,9 +501,9 @@
 			<0xff 206>, /* rpm_ipc(26) */
 			<0xff 207>, /* rpm_ipc(27) */
 			<0xff 211>, /* usb_dwc3_otg */
-			<0xff 212>,  /* msm_dwc3 */
-			<0xff 215>,  /* fc388000.qcom,cpu-bwmon */
-			<0xff 224>,  /* spdm_bw_hyp */
+			<0xff 212>, /* msm_dwc3 */
+			<0xff 215>, /* fc388000.qcom,cpu-bwmon */
+			<0xff 224>, /* spdm_bw_hyp */
 			<0xff 240>, /* summary_irq_kpss */
 			<0xff 256>, /* sdhci */
 			<0xff 261>,  /* msm_iommu_global_cfg */
@@ -520,12 +527,12 @@
 			<0xff 329>,  /* sps */
 			<0xff 332>, /* sps */
 			<0xff 333>, /* ipa */
-			<0xff 348>,  /* fd878000.qcom,fd */
-			<0xff 350>,  /* msm_iommu_nonsecure_irq */
-			<0xff 360>,  /* ARM64 primary DBE IRQ */
-			<0xff 361>,  /* ARM64 secondary DBE IRQ */
-			<0xff 362>,  /* ARM64 primary ext IRQ */
-			<0xff 363>,  /* ARM64 secondary ext IRQ */
+			<0xff 348>, /* fd878000.qcom,fd */
+			<0xff 350>, /* msm_iommu_nonsecure_irq */
+			<0xff 360>, /* ARM64 primary DBE IRQ */
+			<0xff 361>, /* ARM64 secondary DBE IRQ */
+			<0xff 362>, /* ARM64 primary ext IRQ */
+			<0xff 363>, /* ARM64 secondary ext IRQ */
 			<0xff 364>; /* lmh_interrupt */
 
 		qcom,gpio-parent = <&msm_gpio>;
