defconfig: Enable USB Fast Charge
Change-Id: I226ae01db7fe7e3a95a5495c15d4d0f7bb00a386

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -2167,6 +2167,7 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Native drivers
