--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -327,8 +327,8 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
-CONFIG_NR_CPUS=6
-# CONFIG_HOTPLUG_CPU is not set
+CONFIG_NR_CPUS=8
+CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -918,7 +918,7 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
-CONFIG_BT_RFCOMM=yt
+CONFIG_BT_RFCOMM=y
 CONFIG_BT_BNEP=y
 CONFIG_BT_HIDP=y
 
@@ -974,13 +974,13 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_LGE_NFC=y
-CONFIG_LGE_NFC_PN547_C2=y
-# CONFIG_NFC_BCM2079X is not set
+# CONFIG_LGE_NFC is not set
+# CONFIG_LGE_NFC_PN547_C2 is not set
+CONFIG_NFC_BCM2079X=y
 # CONFIG_BCM2079X_MTK_PLATFORM is not set
 # CONFIG_LGE_NFC_PRESTANDBY is not set
 # CONFIG_LGE_NFC_MULTICORE_FASTBOOT is not set
-CONFIG_LGE_NFC_SET_IRQ_WAKEUP=y
+# CONFIG_LGE_NFC_SET_IRQ_WAKEUP is not set
 # CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
 # CONFIG_LGE_NFC_USE_PMIC is not set
 # CONFIG_PN5XX_MTK_PLATFORM is not set
@@ -1152,7 +1152,7 @@ CONFIG_LGE_APPSPORT=y
 #
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_MSM_QDSP6V2_CODECS=y
-# CONFIG_MSM_ULTRASOUND is not set
+CONFIG_MSM_ULTRASOUND=y
 # CONFIG_ITSON_API is not set
 
 #
@@ -1724,7 +1724,7 @@ CONFIG_LGE_TOUCH_LG4945=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_MSTAR21XX is not set
-# CONFIG_TOUCHSCREEN_GEN_VKEYS=y
+CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
@@ -2550,7 +2550,7 @@ CONFIG_MSM_ISPIF=y
 CONFIG_IMX234=y
 # CONFIG_IMX377 is not set
 # CONFIG_IMX208 is not set
-CONFIG_T4KA3=y
+# CONFIG_T4KA3 is not set
 # CONFIG_OV8858 is not set
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
@@ -3739,9 +3739,9 @@ CONFIG_ARM_GIC=y
 CONFIG_MSM_SHOW_RESUME_IRQ=y
 CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
-CONFIG_MOBICORE_SUPPORT=n
+CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
-CONFIG_MOBICORE_API=n
+CONFIG_MOBICORE_API=y
 # CONFIG_RESET_CONTROLLER is not set
 
 #
