--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -2146,7 +2146,7 @@ CONFIG_LGE_PM_UNIFIED_WLC=y
 # CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER is not set
 # CONFIG_LGE_PM_CHARGING_USING_CHGSTS_WLC is not set
 CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
-# CONFIG_LGE_PM_MAXIM_EVP_CONTROL is not set
+CONFIG_LGE_PM_MAXIM_EVP_CONTROL=y
 CONFIG_LGE_PM_QC20_SCENARIO=y
 CONFIG_LGE_PM_LLK_MODE=y
 CONFIG_LGE_PM_SMPL_COUNTER=y
@@ -2155,7 +2155,7 @@ CONFIG_BATTERY_MAX17048=y
 # CONFIG_BATTERY_MAX17050 is not set
 CONFIG_LGE_PM_CHARGE_INFO=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO=y
-# CONFIG_LGE_PM_PARALLEL_CHARGING is not set
+CONFIG_LGE_PM_PARALLEL_CHARGING=y
 # CONFIG_LGE_PM_BOARD_THERM is not set
 # CONFIG_LGE_PM_THERM_VS is not set
 # CONFIG_LGE_PM_CHECK_FB_STATUS is not set
@@ -3347,7 +3347,7 @@ CONFIG_LGE_USB_G_MULTIPLE_CONFIGURATION=y
 CONFIG_LGE_USB_DIAG_LOCK=y
 # CONFIG_LGE_USB_DIAG_LOCK_SPR is not set
 CONFIG_LGE_USB_AUDIO_DOCK=y
-# CONFIG_LGE_USB_MAXIM_EVP is not set
+CONFIG_LGE_USB_MAXIM_EVP=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_HID=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_NETWORK=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_INPUT=y
