defconfig(h811|h815): Add wireless charging feature
Change-Id: I4c7ac6775231c5178e5e9ca940b2025108d42d1e

--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -2143,7 +2143,7 @@ CONFIG_LGE_PM_USB_ID=y
 CONFIG_LGE_PM_UNIFIED_WLC=y
 # CONFIG_LGE_PM_UNIFIED_WLC_ALIGNMENT is not set
 # CONFIG_LGE_PM_UNIFIED_WLC_ALIGNMENT_IDT9025A is not set
-# CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER is not set
+CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER=y
 # CONFIG_LGE_PM_CHARGING_USING_CHGSTS_WLC is not set
 CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
 CONFIG_LGE_PM_MAXIM_EVP_CONTROL=y
