defconfig: Enable LED haptics driver from commit 7cb6b9f96488
Fix error: E android.hardware.vibrator@1.2-service:
 Failed to open /sys/class/leds/vibrator/activate (2):
 No such file or directory

Change-Id: I1340757274156705590e385cd10462bf7d21faaf

--- a/arch/arm64/configs/usu_h815_defconfig
+++ b/arch/arm64/configs/usu_h815_defconfig
@@ -3449,6 +3449,7 @@ CONFIG_LEDS_QPNP_WLED=y
 # CONFIG_LEDS_BLINKM is not set
 CONFIG_LEDS_PMI8994_EMOTIONAL=y
 # CONFIG_LEDS_AW2013 is not set
+CONFIG_LEDS_QPNP_HAPTICS=y
 
 #
 # LED Triggers
