--- a/arch/arm64/boot/dts/lge/pmi8994-haptic.dtsi
+++ b/arch/arm64/boot/dts/lge/pmi8994-haptic.dtsi
@@ -21,7 +21,7 @@
 	qcom,wave-play-rate-us = <5263>;
 	qcom,actuator-type = "erm";
 	qcom,wave-shape = "square";
-	qcom,vmax-mv = <2400>;
+	qcom,vmax-mv-strong = <3596>;
 	qcom,ilim-ma = <150>;
 	qcom,sc-deb-cycles = <8>;
 	qcom,int-pwm-freq-khz = <505>;
