bluetooth: bluesleep: Fixup deep sleep for chipset bcm4335
Based on original commit: sonyxperiadev/kernel@e2e7ece

Change-Id: I84aba7351bdc503a6dd60352499b12a7fbf1d6c7

--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -923,6 +923,7 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
+CONFIG_BT_MSM_SLEEP=y
 CONFIG_BT_RFCOMM=yt
 CONFIG_BT_BNEP=y
 CONFIG_BT_HIDP=y
