drivers: input: Build and enable bma2x2 sensor and double tap
Change-Id: I4c0f873bdc982c0263c481b2a00bce788d3f551f

--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -1620,6 +1620,7 @@ CONFIG_INPUT_EVBUG=n
 #
 # Input Device Drivers
 #
+CONFIG_SENSORS=y
 CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
@@ -1776,7 +1777,8 @@ CONFIG_INPUT_GPIO=m
 # CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_STK3X1X is not set
 # CONFIG_SENSORS_CAPELLA_CM36283 is not set
-# CONFIG_SENSORS_BMA2X2 is not set
+CONFIG_SENSORS_BMA2X2=y
+CONFIG_DOUBLE_TAP=y
 # CONFIG_SENSORS_MC3430 is not set
 # CONFIG_SENSORS_ISL29044A is not set
 CONFIG_INPUT_FINGERPRINT=y
