--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -1620,6 +1620,7 @@ CONFIG_INPUT_EVBUG=n
 #
 # Input Device Drivers
 #
+CONFIG_SENSORS=y
 CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
@@ -1646,7 +1647,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_NOT_USE_HALL_IC is not set
 # CONFIG_INPUT_MOUSE is not set
-CONFIG_DOUBLE_TAP=n
 CONFIG_MOUSE_APPLETOUCH=y
 CONFIG_MOUSE_BCM5974=y
 CONFIG_MOUSE_SYNAPTICS_USB=y
@@ -1777,7 +1777,8 @@ CONFIG_INPUT_GPIO=m
 # CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_STK3X1X is not set
 # CONFIG_SENSORS_CAPELLA_CM36283 is not set
-# CONFIG_SENSORS_BMA2X2 is not set
+CONFIG_SENSORS_BMA2X2=y
+CONFIG_DOUBLE_TAP=y
 # CONFIG_SENSORS_MC3430 is not set
 # CONFIG_SENSORS_ISL29044A is not set
 # CONFIG_INPUT_FINGERPRINT is not set
